modified:   image.png 	modified:   popup.html

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@ body {
   margin: 10px;
   padding: 0;
   width: 300px; /* Ensure the width is consistent */
+  background-color: rgb(233, 218, 221);
 }
 
 h2 {
@@ -17,6 +18,7 @@ h2 {
   color: #333;
   border-bottom: 2px solid #ddd; /* Add bottom border to headings */
   padding-bottom: 5px;
+  text-align: center;
 }
 
 .container {
@@ -42,7 +44,7 @@ input[type="text"] {
 button {
   padding: 5px 10px;
   border: none;
-  background-color: #007bff;
+  background-color: #d63384;
   color: white;
   cursor: pointer;
   border-radius: 4px;
@@ -50,7 +52,7 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #c26995;
 }
 
 select {
