modified:   popup.html

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 10px;
   padding: 0;
-  width: 300px; /* Ensure the width is consistent */
+  width: 300px; 
   background-color: rgb(233, 218, 221);
 }
 
@@ -16,7 +16,7 @@ h2 {
   margin-top: 0;
   font-size: 1.4em;
   color: #333;
-  border-bottom: 2px solid #ddd; /* Add bottom border to headings */
+  border-bottom: 2px solid #ddd; 
   padding-bottom: 5px;
   text-align: center;
 }
@@ -38,7 +38,7 @@ input[type="text"] {
   padding: 8px;
   border: 1px solid #ddd;
   border-radius: 4px;
-  font-size: 0.9em; /* Slightly smaller font size */
+  font-size: 0.9em; 
 }
 
 button {
@@ -48,7 +48,7 @@ button {
   color: white;
   cursor: pointer;
   border-radius: 4px;
-  font-size: 0.9em; /* Slightly smaller font size */
+  font-size: 0.9em; 
 }
 
 button:hover {
@@ -59,7 +59,7 @@ select {
   padding: 5px;
   border: 1px solid #ddd;
   border-radius: 4px;
-  font-size: 0.9em; /* Slightly smaller font size */
+  font-size: 0.9em; 
 }
 
 .subject, .article {
@@ -83,7 +83,6 @@ select {
   justify-content: space-between; /* Align delete button to the right */
   align-items: center;
   gap: 5px; /* Add some gap between the link and the delete button */
-  overflow-x: auto; /* Allow horizontal scrolling */
 }
 
 
@@ -110,7 +109,7 @@ select {
 
 .title {
   font-weight: bold;
-  color: #000000; /* Make subject titles blue */
+  color: #000000; 
 }
 
 /* New colors for the articles */
