modified:   popup.html 	modified:   popup.js

--- a/popup.html
+++ b/popup.html
@@ -112,14 +112,21 @@ select {
   color: #000000; 
 }
 
-/* New colors for the articles */
-.article.read {
-  background-color: #d4edda; /* Light green */
+.toggle-read-button {
+  padding: 5px;
+  border: none;
+  background-color: #619fe2;
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 0.8em;
+  margin-left: 5px;
 }
 
-.article.unread {
-  background-color: #f8d7da; /* Light red */
+.toggle-read-button:hover {
+  background-color: #7d99b8;
 }
+
 
 
   </style>
